--- a/calculator/calculator/Base.lproj/Main.storyboard
+++ b/calculator/calculator/Base.lproj/Main.storyboard
@@ -221,6 +221,9 @@
                                 <rect key="frame" x="494" y="252" width="86" height="82"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="←"/>
+                                <connections>
+                                    <action selector="backspace:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FHs-h3-t17"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
